--- a/css/styles.css
+++ b/css/styles.css
@@ -2,8 +2,10 @@
 @import "variables.css";
 /* components */
 @import "components/status-bar.css";
+@import "components/nav-bar.css";
 /* screens */
 @import "screens/login.css";
+
 
 body{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
