--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -14,5 +14,30 @@
 
 .nav__a{
     color: #2e363e;
+    position: relative;
 }
 
+.nav__notification{
+    background-color: tomato;
+    width: 30px;
+    height: 30px;
+    border-radius: 15px; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-weight: 600;
+    position: absolute;
+    right: -15px;
+    bottom: 15px;
+}
+
+.nav__dot{
+    background-color: tomato;
+    width: 5px;
+    height: 5px;
+    border-radius: 15px; 
+    position: absolute;
+    left: 28px;
+    bottom: 28px;
+}
