--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -29,3 +29,17 @@
     width: 80px;
     height: 80px;
 }
+
+.user-component__photo--sm{
+    width: 60px;
+    height: 60px;
+    border-radius: 25px;
+}
+
+.user-component__name--light{
+    font-weight: 400;
+}
+
+.user-component__column:last-child{
+    color: rgba(0, 0, 0, 0.5);
+}
