--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -17,4 +17,8 @@
 .friends-screen__channel{
     display: flex;
     justify-content: space-between;
+    margin: 25px 0px;
+    border-top: 1px solid rgba(0, 0, 0, 0.3);
+    padding: 15px;
+    color: rgba(0, 0, 0, 0.5);
 }
