--- a/css/styles.css
+++ b/css/styles.css
@@ -13,3 +13,7 @@ body{
     color: #2e363e;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+.main-screen{
+    padding: 0px 25px;
+}
