--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -42,10 +42,17 @@
 }
 
 .user-component__column:last-child{
-    color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    color: rgba(0, 0, 0, 0.4);
 }
 
 .user-component__subtitle{
     display: flex;
     flex-direction: column;
+}
+
+.user-component__time{
+    margin-bottom: 10px;
 }
