--- a/css/screens/find.css
+++ b/css/screens/find.css
@@ -13,3 +13,24 @@
     font-size: 35px;
     margin-bottom: 15px;
 }
+
+.recommend-friends{
+    margin: 25px 0px;
+    padding: 25px 0px;
+    border-top: 1px solid rgba(0, 0, 0, 0.3);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+}
+
+.recommend-friends__title{
+    font-size: 14px;
+    color: rgba(0, 0, 0, 0.5);
+}
+.recommend-friends span{
+    font-size: 18px;
+    display: block;
+    margin: 100px 0px;
+    text-align: center;
+    color: rgba(0, 0, 0, 0.5);
+}
+
+     
