--- a/css/screens/find.css
+++ b/css/screens/find.css
@@ -33,4 +33,56 @@
     color: rgba(0, 0, 0, 0.5);
 }
 
+.open-chat{
+    color: rgba(0, 0, 0, 0.8);
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 25px;
+}
+
+.open-chat__column:last-child span{
+    color: rgba(0, 0, 0, 0.6);
+}
      
+.open-post{
+    display: flex;
+}
+
+.open-post__title{
+    font-weight: 600;
+    margin-bottom: 10px;
+    text-transform: uppercase;
+}
+.open-post__hashtag{
+    text-transform: uppercase;
+    opacity: 0.6;
+}
+
+.open-post__members{
+    margin-top: 7px;
+    display: flex;
+    align-items: center;
+}
+.open-post__members img{
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    margin-right: 5px;
+}
+
+.open-post__member-count{
+    opacity: 0.5;
+    font-size: 14px;
+}
+
+.open-post__members .divider{
+    width: 2px;
+    height: 15px;
+    background-color: rgba(0, 0, 0, 0.4);
+    margin: 0px 5px;
+}
+
+.open-post__member-status{
+    color: pink;
+    text-transform: capitalize;
+}
