--- a/css/screens/find.css
+++ b/css/screens/find.css
@@ -46,6 +46,8 @@
      
 .open-post{
     display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .open-post__title{
@@ -85,4 +87,31 @@
 .open-post__member-status{
     color: pink;
     text-transform: capitalize;
+}
+
+.open-post__column:last-child{
+    position: relative;
+}
+
+.open-post__column:last-child img{
+    width: 120px;
+    height: 120px;
+    border-radius: 10px;
+}
+
+.open-post__heart{
+    color: white;
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 5px;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    font-size: 12px;
+}
+
+.open-post__heart span{
+    margin-left: 3px;    
 }
