--- a/css/styles.css
+++ b/css/styles.css
@@ -7,11 +7,13 @@
 @import "components/user-component.css";
 @import "components/badge.css";
 @import "components/icons.css";
+@import "components/alt-screen-header.css";
 /* screens */
 @import "screens/login.css";
 @import "screens/friends.css";
 @import "screens/find.css";
 @import "screens/more.css";
+@import "screens/setting.css";
 
 body{
     color: #2e363e;
