32. Chat Screen part Five

--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -2,7 +2,7 @@
     background-color: #abc1d1;
 }
 
-#chat-screen .alt-header{
+#chat-screen .alt-screen-header{
     position: fixed;
     width: 100%;
     box-sizing: border-box;
@@ -15,12 +15,12 @@
 .main-chat{
     display: flex;
     justify-content: center;
+    margin-bottom: 40px;
 }
 
 .chat__time{
     font-size: 14px;
     position: fixed;
-    margin-top: 100px;
     color: white;
     background-color: #92a4b2;
     padding: 15px;
@@ -29,7 +29,7 @@
 
 .message-row{
     display: flex;
-    margin-top: 180px;
+    margin-top: 10px;
 }
 
 .message-row__author{
@@ -63,4 +63,20 @@
 .message-row__info__time{
     font-size: 13px;
     opacity: 0.8;
+}
+
+.message-row--own{
+    justify-content: flex-end;
+}
+.message-row--own .message-row__info__text{
+    background-color: var(--yellow);
+    border-top-right-radius: 0px;
+    border-top-left-radius: 15px;
+    margin-right: 0px;
+    margin-left: 5px;
+
+}
+
+.message-row--own .message-row__info{
+    flex-direction: row-reverse;
 }
