--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 @import "reset.css";
 @import "variables.css";
+@import "exam.css";
 /* components */
 @import "components/status-bar.css";
 @import "components/nav-bar.css";
@@ -15,6 +16,8 @@
 @import "screens/more.css";
 @import "screens/setting.css";
 @import "screens/chat.css";
+
+
 
 body{
     color: #2e363e;
